--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,5 +7,6 @@
 	<input type="hidden" name="createId" value="100"/>
 	<input type="hidden" name="updateId" value="100"/>
 	<input type="file" name="picture" />
+	<input type="password" name="password" />
 	<button type="submit">Submit</button>
 </form>
